# immortal_pet_v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig
docs/: gameplay-and-entrypoints.md  hardware-bom.md  homepage-implementation-progress.md  xiaozhi-ai-integration.md  xiaozhi-pet-persona.md
docs/superpowers/plans/: 2026-07-23-cultivator-companion-gameplay.md
docs/superpowers/specs/: 2026-07-23-cultivator-companion-gameplay-design.md
firmware/components/game_core/: CMakeLists.txt  README.md  game_engine.cpp
firmware/components/game_core/tests/: CMakeLists.txt  game_engine_test.cpp
firmware/device/: sdkconfig
firmware/device/main/: CMakeLists.txt  Kconfig.projbuild
firmware/device/main/assets/immortal_pet/character_source/processed/claim/: pipeline-meta.json
firmware/device/main/assets/immortal_pet/character_source/processed/cultivate/: pipeline-meta.json
firmware/device/main/assets/immortal_pet/character_source/processed/idle/: pipeline-meta.json
firmware/device/main/assets/immortal_pet/character_source/processed/journey/: pipeline-meta.json
firmware/device/main/assets/immortal_pet/character_source/processed/talk/: pipeline-meta.json
firmware/device/main/boards/waveshare/esp32-s3-touch-amoled-2.16/: config.json  esp32-s3-touch-amoled-2.16.cc
firmware/device/main/immortal_pet/: game_engine.cpp  game_engine.h
